--- a/public/hakkimizda.html
+++ b/public/hakkimizda.html
@@ -105,8 +105,8 @@
             <div class="main-menu-wrapper__right">
               
               <div class="main-menu-wrapper__btn-box">
-                <a href="giris.html" class="giris-button" id="giris-button">Giriş</a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn kaydol-button" id="logout-button">Kaydol</a>
+                <a href="hesabim.html" class="giris-button">Giriş</a>
+                <a href="giris.html" class="thm-btn main-menu-wrapper__btn">Kaydol</a>
               </div>
             </div>
           </div>
@@ -195,16 +195,18 @@
               <div class="cta-one__inner">
                 <div class="cta-one__left">
                   <div class="cta-one__icon">
-                    <span class="icon-rent-sign"></span>
+                    <!--<span class="icon-rent-sign"></span>-->
+                    <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/icons/kiralananevler.svg" alt="" class="hakkindaicon">
+                    
                   </div>
                   <div class="cta-one__content">
-                    <p>5200 memnunmüşteri ile</p>
+                    <p>100k+ memnun müşteri ile</p>
                     <h2>Size en kaliteli hizmeti vermek için buradayız</h2>
                   </div>
                 </div>
-                <div class="cta-one__btn-box">
+                <!--<div class="cta-one__btn-box">
                   <a href="reservation.html" class="quick-popup thm-btn thm-btn-white" id="reservation-button">Rezervasyon</a>
-                </div>
+                </div>-->
               </div>
             </div>
           </div>
