--- a/public/villalar-list-2.html
+++ b/public/villalar-list-2.html
@@ -104,8 +104,8 @@
             <div class="main-menu-wrapper__right">
               
               <div class="main-menu-wrapper__btn-box">
-                <a href="giris.html" class="giris-button" id="giris-button">Giriş</a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn kaydol-button" id="logout-button">Kaydol</a>
+                <a href="hesabim.html" class="giris-button">Giriş</a>
+                <a href="giris.html" class="thm-btn main-menu-wrapper__btn">Kaydol</a>
               </div>
             </div>
           </div>
@@ -245,7 +245,7 @@
                   <p class="property-card-text">
                            Doğanın kucağında, köy ve göl manzarasına karşı konumlanan Kuzeymen 2+1 evi, huzurlu bir tatil arayanlar için ideal bir seçenek sunuyor. İki katlı yapısıyla ferah bir yaşam alanı sunan bu taş ev, sade ama sıcak dekorasyonu ve ahşap detaylarıyla öne çıkıyor. Geniş bir bahçe içinde yer alan özel yüzme havuzu, güne serin bir başlangıç yapmak ya da gün batımını keyifle izlemek için mükemmel bir alan sağlıyor.
                   <div class="property-card-price-meta">
-                    <h5 class="property-card-price">8.000 TL</h5>
+                    <h5 class="property-card-price">10.000 TL</h5>
                     <div class="property-ratting-wrap">
                       <div class="star-ratting">
                         <i class="fa fa-star" style="color: #97bc62;"></i>
@@ -300,7 +300,7 @@
                   <p class="property-card-text">
                            Kuzeymen 3+1, ferah yaşam alanları ve göz alıcı taş mimarisiyle doğayla iç içe huzurlu bir kaçamak sunuyor. Geniş bahçesinde yer alan özel yüzme havuzu, keyifli serinleme anlarına ev sahipliği yaparken, modern mutfağı ve konforlu oturma alanları ile evinizin sıcaklığını aratmıyor. Barbekü alanı, açık havada lezzetli sofralar kurmanız için birebir.
                   <div class="property-card-price-meta">
-                    <h5 class="property-card-price">10.000 TL</h5>
+                    <h5 class="property-card-price">12.000 TL</h5>
                     <div class="property-ratting-wrap">
                       <div class="star-ratting">
                         <i class="fa fa-star" style="color: #97bc62;"></i>
@@ -354,7 +354,7 @@
                   </h4>
                   <p class="property-card-text">
 Derbent White , göl manzarasının dinginliğiyle buluşan geniş yaşam alanları ve taş mimarisiyle benzersiz bir konaklama deneyimi sunuyor. Doğanın tam ortasında, ferah iç mekânları ve özenle tasarlanmış detaylarıyla hem aileler hem de kalabalık arkadaş grupları için ideal bir kaçış noktası. Geniş mutfağı, rahat oturma alanı ve rustik dekorasyonu ile evinizdeymiş gibi hissettiren bir ortam sizi bekliyor. Özellikle odun sobası, sıcak ve samimi anılar biriktirmeniz için atmosferi tamamlıyor.                  <div class="property-card-price-meta">
-                    <h5 class="property-card-price">15.000 TL</h5>
+                    <h5 class="property-card-price">20.000 TL</h5>
                     <div class="property-ratting-wrap">
                       <div class="star-ratting">
                         <i class="fa fa-star" style="color: #97bc62;"></i>
@@ -399,7 +399,7 @@ Derbent White , göl manzarasının dinginliğiyle buluşan geniş yaşam alanla
             <div class="property-card-wrap style-dark">
               <div class="property-thumb">
                 <img
-                      src="https://tasmahal.s3.eu-north-1.amazonaws.com/resources/explore-rent-img-8.png"
+                      src="https://tasmahal.s3.eu-north-1.amazonaws.com/cards/Stone_house_card.webp"
                       alt=""
                     />
               </div>
@@ -411,7 +411,7 @@ Derbent White , göl manzarasının dinginliğiyle buluşan geniş yaşam alanla
                   </h4>
                   <p class="property-card-text">
 İznik’in Şerefiye Köyü’nde yer alan Stone House, villalarımızın en ayrıcalıklı ve en gözdesi olarak öne çıkıyor. Doğanın tam kalbinde, göl ve orman manzarasına karşı konumlanan bu taş villa, 450 metrekarelik geniş yaşam alanıyla kalabalık gruplar ve aileler için benzersiz bir konaklama imkanı sunuyor. Altı yatak odası, beş banyo ve iki mutfak ile rahatlığınız için her detay düşünülmüş. İç jakuzisi ve büyük özel havuzu sayesinde yılın her günü lüks ve konforu bir arada yaşamanız mümkün.                  <div class="property-card-price-meta">
-                    <h5 class="property-card-price">30.000 TL</h5>
+                    <h5 class="property-card-price">35.000 TL</h5>
                     <div class="property-ratting-wrap">
                       <div class="star-ratting">
                         <i class="fa fa-star" style="color: #97bc62;"></i>
