--- a/public/villalar-list.html
+++ b/public/villalar-list.html
@@ -104,8 +104,8 @@
             <div class="main-menu-wrapper__right">
               
               <div class="main-menu-wrapper__btn-box">
-                <a href="giris.html" class="giris-button" id="giris-button">Giriş</a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn kaydol-button" id="logout-button">Kaydol</a>
+                <a href="hesabim.html" class="giris-button">Giriş</a>
+                <a href="giris.html" class="thm-btn main-menu-wrapper__btn">Kaydol</a>
               </div>
             </div>
           </div>
@@ -192,7 +192,7 @@
                            Derbent Kale Villaları’nın 1+1 seçeneği, İznik’in huzurlu köylerinden Derbent’te, doğayla baş başa özel bir tatil deneyimi arayanlar için tasarlandı. Şık ve konforlu iç mekânında yatak odası, tam donanımlı mutfak, iç jakuzi ve modern bir banyo yer alıyor. Kendinize ait özel havuzda gün boyu serinleyebilir, orman ve göl manzarası eşliğinde doğanın tadını çıkarabilirsiniz.</p>
                  
                   <div class="property-card-price-meta">
-                    <h5 class="property-card-price">7.000 TL</h5>
+                    <h5 class="property-card-price">8.000 TL</h5>
                     <div class="property-ratting-wrap">
                       <div class="star-ratting">
                         <i class="fa fa-star" style="color: #97bc62;"></i>
