--- a/public/index-old.html
+++ b/public/index-old.html
@@ -103,8 +103,8 @@
             <div class="main-menu-wrapper__right">
               
               <div class="main-menu-wrapper__btn-box">
-                <a href="giris.html" class="giris-button" id="giris-button">Giriş</a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn kaydol-button" id="logout-button">Kaydol</a>
+                <a href="hesabim.html" class="giris-button">Giriş</a>
+                <a href="giris.html" class="thm-btn main-menu-wrapper__btn">Kaydol</a>
               </div>
             </div>
           </div>
@@ -287,7 +287,7 @@
                       <a href="./elbeyli-villas-3.html">Elbeyli Villas 3+1</a>
                     </h3>
                     <p class="explore-rent__price">
-                      <span>12.000 TL</span>/ Gecelik
+                      <span>15.000 TL</span>/ Gecelik
                     </p>
                     <ul class="list-unstyled explore-rent__details">
                       <li><a href="javascript:void(0)">160 m²</a></li>
@@ -319,7 +319,7 @@
                       <a href="derbent-kale-1.html">Derbent Kale 1+1</a>
                     </h3>
                     <p class="explore-rent__price">
-                      <span>7.000 TL</span>/ Gecelik
+                      <span>8.000 TL</span>/ Gecelik
                     </p>
                     <ul class="list-unstyled explore-rent__details">
                       <li><a href="javascript:void(0)">80 m²</a></li>
@@ -380,7 +380,7 @@
                       <a href="elbeyli-waterfall.html">Waterfall House</a>
                     </h3>
                     <p class="explore-rent__price">
-                      <span>12.000 TL </span>/ Gecelik
+                      <span>15.000 TL </span>/ Gecelik
                     </p>
                     <ul class="list-unstyled explore-rent__details">
                       <li><a href="javascript:void(0)">180 m²</a></li>
@@ -438,7 +438,7 @@
                       <a href="elbeyli-kuzeymen-2.html">Kuzeymen 2+1</a>
                     </h3>
                     <p class="explore-rent__price">
-                      <span>8.000 TL </span>/ Gecelik
+                      <span>10.000 TL </span>/ Gecelik
                     </p>
                     <ul class="list-unstyled explore-rent__details">
                       <li><a href="javascript:void(0)">120 m²</a></li>
@@ -527,7 +527,7 @@
                       <a href="derbent-white.html">Derbent White </a>
                     </h3>
                     <p class="explore-rent__price">
-                      <span>15.000 TL </span>/ Gecelik
+                      <span>20.000 TL </span>/ Gecelik
                     </p>
                     <ul class="list-unstyled explore-rent__details">
                       <li><a href="javascript:void(0)">250 m²</a></li>
@@ -556,7 +556,7 @@
                       <a href="serefiye-stone.html">Şerefiye Stone House</a>
                     </h3>
                     <p class="explore-rent__price">
-                      <span>30.000 TL </span>/ Gecelik
+                      <span>35.000 TL </span>/ Gecelik
                     </p>
                     <ul class="list-unstyled explore-rent__details">
                       <li><a href="#">470 m²</a></li>
