--- a/public/giris.html
+++ b/public/giris.html
@@ -461,7 +461,7 @@
 
         <div class="logo-box">
           <a href="index.html" aria-label="logo image"
-            ><img src="assets/images/resources/logo-1.svg" width="155" alt=""
+            ><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/resources/logo-1.svg" width="155" alt=""
           /></a>
         </div>
         <!-- /.logo-box -->
