--- a/public/hesabim.html
+++ b/public/hesabim.html
@@ -505,7 +505,7 @@
                     <li>
                       <div class="icon">
                         <span class="footer-phone">
-                          <img src="./https://tasmahal.s3.eu-north-1.amazonaws.com/favicons/footer-phone.svg" alt="" />
+                          <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/favicons/footer-phone.svg" alt="" />
                         </span>
                       </div>
                       <div class="text">
@@ -563,7 +563,7 @@
 
         <div class="logo-box">
           <a href="index.html" aria-label="logo image"
-            ><img src="assets/images/resources/logo-1.svg" width="155" alt=""
+            ><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/resources/logo-1.svg" width="155" alt=""
           /></a>
         </div>
         <!-- /.logo-box -->
