--- a/public/kullanim-sartlari.html
+++ b/public/kullanim-sartlari.html
@@ -106,8 +106,8 @@
             <div class="main-menu-wrapper__right">
               
               <div class="main-menu-wrapper__btn-box">
-                <a href="hesabim.html" class="giris-button">Giriş</a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn">Kaydol</a>
+                <a href="hesabim.html" class="giris-button" id="giris-button">Giriş</a>
+                <a href="giris.html" class="thm-btn main-menu-wrapper__btn" id="logout-button">Kaydol</a>
               </div>
             </div>
           </div>
