--- a/public/gizlilik.html
+++ b/public/gizlilik.html
@@ -392,7 +392,8 @@ veya gelecekte Kurul&rsquo;un belirleyeceği diğer y&ouml;ntemlerle iletebilirs
     <script src="assets/vendors/wow/wow.js"></script>  
     <script src="assets/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
-    <script src="assets/js/modernizr.js"></script>
+    <script src="assets/js/modernizr.js"></script>    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <script src="assets/js/entox.js"></script>
   </body>
 </html>
