--- a/public/index.html
+++ b/public/index.html
@@ -922,7 +922,7 @@
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
     <script src="assets/js/modernizr.js"></script>
     <!-- main js -->
-    
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="assets/js/entox.js"></script>
 
     
