--- a/public/villalar-list.html
+++ b/public/villalar-list.html
@@ -682,7 +682,8 @@ Elbeyli Villas, doğanın kalbinde, taş ve ahşabın sıcak dokusunu modern det
     <script src="assets/vendors/wow/wow.js"></script>  
     <script src="assets/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
-    <script src="assets/js/modernizr.js"></script>
+    <script src="assets/js/modernizr.js"></script>    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <script src="assets/js/entox.js"></script>
 
 
