--- a/public/fethiye-3+1.html
+++ b/public/fethiye-3+1.html
@@ -210,7 +210,8 @@
                   
                   
                   <div class="listing-details__right-price-text">
-                    <p>30.000 TL / Gecelik / Başlayan fiyatlarla</p>
+                    <p>30.000 TL / Gecelik  </p>
+                    <h5>Başlayan fiyatlarla</h5>
                   </div>
                 </div>
                   <div class="listing-details__contact-info">
