--- a/public/index.html
+++ b/public/index.html
@@ -213,7 +213,7 @@
                       <a href="serefiye-stone.html">Şerefiye Stone House</a>
                     </h3>
                     <p class="explore-rent__price">
-                      <span>35.000 TL</span> / Gecelik / Başlayan fiyatlarla
+                      <span>35.000 TL</span> / Gecelik 
                     
                     </p>
 
@@ -246,7 +246,7 @@
                       <a href="fethiye-3+1.html">Vadi Fethiye</a>
                     </h3>
                     <p class="explore-rent__price">
-                      <span>30.000 TL </span> / Gecelik / Başlayan fiyatlarla
+                      <span>30.000 TL </span> / Gecelik 
                     </p>
                     <ul class="list-unstyled explore-rent__details">
                       <li><a href="javascript:void(0)">180 m²</a></li>
@@ -278,7 +278,7 @@
                       <a href="derbent-white.html">Derbent White </a>
                     </h3>
                     <p class="explore-rent__price">
-                      <span>20.000 TL </span> / Gecelik / Başlayan fiyatlarla
+                      <span>20.000 TL </span> / Gecelik 
                     </p>
                     <ul class="list-unstyled explore-rent__details">
                       <li><a href="javascript:void(0)">250 m²</a></li>
@@ -311,7 +311,7 @@
                       <a href="./elbeyli-villas-3.html">Elbeyli Villas 3+1</a>
                     </h3>
                     <p class="explore-rent__price">
-                      <span>12.000 TL </span> / Gecelik / Başlayan fiyatlarla
+                      <span>12.000 TL </span> / Gecelik 
                     </p>
                     <ul class="list-unstyled explore-rent__details">
                       <li><a href="javascript:void(0)">160 m²</a></li>
@@ -342,7 +342,7 @@
                       <a href="elbeyli-villas-2.html">Elbeyli Villas 2+1</a>
                     </h3>
                     <p class="explore-rent__price">
-                      <span>10.000 TL </span> / Gecelik / Başlayan fiyatlarla
+                      <span>10.000 TL </span> / Gecelik 
                     </p>
                     <ul class="list-unstyled explore-rent__details">
                       <li><a href="javascript:void(0)">125 m²</a></li>
@@ -370,7 +370,7 @@
                       <a href="derbent-villas.html">Derbent Villas</a>
                     </h3>
                     <p class="explore-rent__price">
-                      <span>10.000 TL </span> / Gecelik / Başlayan fiyatlarla
+                      <span>10.000 TL </span> / Gecelik 
                     </p>
                     <ul class="list-unstyled explore-rent__details">
                       <li><a href="javascript:void(0)">125 m²</a></li>
