--- a/public/derbent-kale-1.html
+++ b/public/derbent-kale-1.html
@@ -188,7 +188,8 @@
                   
                   
                   <div class="listing-details__right-price-text">
-                    <p>8.000 TL / Gecelik / Başlayan fiyatlarla</p>
+                    <p>8.000 TL / Gecelik  </p>
+                    <h5>Başlayan fiyatlarla</h5>
                   </div>
                 </div>
                   <div class="listing-details__contact-info">
