--- a/public/elbeyli-villas-3.html
+++ b/public/elbeyli-villas-3.html
@@ -189,7 +189,8 @@
                   
                   
                   <div class="listing-details__right-price-text">
-                    <p>12.000 TL / Gecelik / Başlayan fiyatlarla</p>
+                    <p>12.000 TL / Gecelik  </p>
+                    <h5>Başlayan fiyatlarla</h5>
                   </div>
                 </div>
                <div class="listing-details__contact-info">
