--- a/public/iletisim.html
+++ b/public/iletisim.html
@@ -236,7 +236,7 @@
           <div class="row">
             <div class="col-xl-4 col-lg-4">
               <div class="contact-info__single">
-                <div class="contact-info__icon" style="width: fit-content;">
+                <div class="contact-info__icon" >
                 <li class="premium-ride__single wow fadeInUp" data-wow-delay="100ms">
                   <a href="https://maps.app.goo.gl/XDRdnb8dXwsGVGmT6" target="_blank">
                     <div class="premium-ride__img">
@@ -261,7 +261,7 @@
             </div>
             <div class="col-xl-4 col-lg-4">
               <div class="contact-info__single">
-                <div class="contact-info__icon" style="width: fit-content;">
+                <div class="contact-info__icon" >
                   <li class="premium-ride__single wow fadeInUp"data-wow-delay="100ms">
                     <a href="mailto:info@villavillage.tr">
                       <div class="premium-ride__img">
@@ -283,7 +283,7 @@
             </div>
             <div class="col-xl-4 col-lg-4">
               <div class="contact-info__single">
-                <div class="contact-info__icon" style="width: fit-content;">
+                <div class="contact-info__icon" >
                   <li class="premium-ride__single wow fadeInUp"data-wow-delay="100ms">
                     <a href="mailto:info@villavillage.tr">
                       <div class="premium-ride__img">
