--- a/public/serefiye-stone.html
+++ b/public/serefiye-stone.html
@@ -505,7 +505,7 @@
                    <li>
                       <div class="icon">
                         <span class="footer-phone">
-                          <img src="./https://tasmahal.s3.eu-north-1.amazonaws.com/favicons/footer-phone.svg" alt="" />
+                          <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/favicons/footer-phone.svg" alt="" />
                         </span>
                       </div>
                       <div class="text">
