--- a/public/elbeyli-kuzeymen-2.html
+++ b/public/elbeyli-kuzeymen-2.html
@@ -688,11 +688,19 @@
 
     <script src="assets/vendors/jquery/jquery-3.5.1.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendors/jquery-appear/jquery.appear.min.js"></script>
     <script src="assets/vendors/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
-    <script src="assets/vendors/wow/wow.js"></script>  
+    <script src="assets/vendors/odometer/odometer.min.js"></script>
+    <script src="assets/vendors/wow/wow.js"></script>
+    <script src="assets/vendors/countdown/countdown.min.js"></script>
+    <script src="assets/vendors/owl-carousel/owl.carousel.min.js"></script>
+    <script src="assets/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
+    <script src="assets/vendors/jarallax/jarallax.min.js"></script>
+    <script src="assets/vendors/vegas/vegas.min.js"></script>
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
-    <script src="assets/js/modernizr.js"></script>    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
+    <script src="assets/js/modernizr.js"></script>
+    <!-- main js -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="assets/js/entox.js"></script>
 
 
