--- a/public/elbeyli-villas-3.html
+++ b/public/elbeyli-villas-3.html
@@ -699,12 +699,12 @@
     <!-- template js -->
     <!-- template js -->
      
-    <script src="assets/js/entox.js"></script>
+    </script>
     <script>$("#glasscase").glassCase({
   thumbsPosition: "bottom", 
   widthDisplayPerc: 100,
   isDownloadEnabled: false,
-});</script>
+});</>
  <!-- share js -->
     <script>
       const shareButton = document.querySelector(".share-button");
