--- a/public/derbent-kale-2.html
+++ b/public/derbent-kale-2.html
@@ -697,7 +697,7 @@
     <!-- template js -->
     <!-- template js -->
      
-    <script src="assets/js/entox.js"></script>
+    </script>
     <script>$("#glasscase").glassCase({
   thumbsPosition: "bottom",
   widthDisplayPerc: 100,
