--- a/public/derbent-white.html
+++ b/public/derbent-white.html
@@ -720,7 +720,7 @@
     <!-- template js -->
     <!-- template js -->
      
-    <script src="assets/js/entox.js"></script>
+    </script>
     <script>$("#glasscase").glassCase({
   thumbsPosition: "bottom",
   widthDisplayPerc: 100,
