--- a/public/elbeyli-kuzeymen-2.html
+++ b/public/elbeyli-kuzeymen-2.html
@@ -707,7 +707,7 @@
     <!-- template js -->
     <!-- template js -->
      
-    <script src="assets/js/entox.js"></script>
+    </script>
     <script>$("#glasscase").glassCase({
   thumbsPosition: "bottom",
   widthDisplayPerc: 100,
