--- a/public/elbeyli-kuzeymen-3.html
+++ b/public/elbeyli-kuzeymen-3.html
@@ -692,7 +692,7 @@
     <!-- template js -->
     <!-- template js -->
      
-    <script src="assets/js/entox.js"></script>
+    </script>
     <script>$("#glasscase").glassCase({
   thumbsPosition: "bottom",
   widthDisplayPerc: 100,
