--- a/public/elbeyli-villas-2.html
+++ b/public/elbeyli-villas-2.html
@@ -687,7 +687,7 @@
      
     <!-- template js -->
      
-    <script src="assets/js/entox.js"></script>
+    </script>
     <script>$("#glasscase").glassCase({
   thumbsPosition: "bottom",
   widthDisplayPerc: 100,
