--- a/public/serefiye-stone.html
+++ b/public/serefiye-stone.html
@@ -726,7 +726,7 @@
     <!-- template js -->
     <!-- template js -->
      
-    <script src="assets/js/entox.js"></script>
+    </script>
     <script>$("#glasscase").glassCase({
   thumbsPosition: "bottom",
   widthDisplayPerc: 100,
