--- a/public/elbeyli-villas-3.html
+++ b/public/elbeyli-villas-3.html
@@ -704,7 +704,7 @@
   thumbsPosition: "bottom", 
   widthDisplayPerc: 100,
   isDownloadEnabled: false,
-});</>
+});</script>
  <!-- share js -->
     <script>
       const shareButton = document.querySelector(".share-button");
