--- a/public/hesabim.html
+++ b/public/hesabim.html
@@ -146,7 +146,7 @@
             <div class="main-menu-wrapper__right">
               
               <div class="main-menu-wrapper__btn-box">
-                <a href="giris.html" class="giris-button" id="giris-button">Giriş</a>
+                <a href="giris.html" class="giris-button" id="login-button">Giriş</a>
                 <a href="giris.html" class="thm-btn main-menu-wrapper__btn">Çıkış Yap</a>
               </div>
             </div>
