--- a/public/villalar-list-2.html
+++ b/public/villalar-list-2.html
@@ -104,7 +104,7 @@
             <div class="main-menu-wrapper__right">
               
               <div class="main-menu-wrapper__btn-box">
-                <a href="giris.html" class="giris-button" id="giris-button">Giriş</a>
+                <a href="giris.html" class="giris-button" id="login-button">Giriş</a>
                 <a href="giris.html" class="thm-btn main-menu-wrapper__btn" id="logout-button">Kaydol</a>
               </div>
             </div>
