--- a/public/elbeyli-villas-3.html
+++ b/public/elbeyli-villas-3.html
@@ -656,11 +656,11 @@
 
           <li>
             <i class="fa fa-user-o"></i>
-            <a href="giris.html">Giriş Yap</a>
+            <a href="giris.html" id="mobile-login-button">Giriş Yap</a>
           </li>
           <li>
             <i class="fa fa-address-card-o"></i>
-            <a href="hesabim.html">Kaydol</a>
+            <a href="hesabim.html" id="mobile-login-button">Kaydol</a>
           </li>
         </ul>
         <!-- /.mobile-nav__contact -->
