--- a/public/elbeyli-waterfall.html
+++ b/public/elbeyli-waterfall.html
@@ -582,7 +582,7 @@
                     <li><a href="elbeyli-waterfall.html">Waterfall Villaları</a></li>
                     <li><a href="derbent-kale-2.html">Kale Villaları</a></li>
                     <li><a href="elbeyli-villas-3.html">Hobbit Villaları</a></li>
-                    <li><a href="serefiye-stone.html">Stone Houses</a></li>
+                    <li><a href="serefiye-stone.html">Stone House</a></li>
                     
                   </ul>
                  
