--- a/public/hesabim.html
+++ b/public/hesabim.html
@@ -460,7 +460,7 @@
                     <li><a href="#">Waterfall Villaları</a></li>
                     <li><a href="#">Kale Villaları</a></li>
                     <li><a href="#">Hobbit Villaları</a></li>
-                    <li><a href="#">Stone Houses</a></li>
+                    <li><a href="#">Stone House</a></li>
                     
                   </ul>
                  
