--- a/public/villalar-list-mugla.html
+++ b/public/villalar-list-mugla.html
@@ -327,7 +327,7 @@ Vadi Fethiye'nin doğayla iç içe konumlanmış 31 villası, taş ve ahşap dok
                     <li><a href="elbeyli-waterfall.html">Waterfall Villaları</a></li>
                     <li><a href="derbent-kale-2.html">Kale Villaları</a></li>
                     <li><a href="elbeyli-villas-3.html">Hobbit Villaları</a></li>
-                    <li><a href="serefiye-stone.html">Stone Houses</a></li>
+                    <li><a href="serefiye-stone.html">Stone House</a></li>
                     
                   </ul>
                  
