--- a/public/kullanim-sartlari.html
+++ b/public/kullanim-sartlari.html
@@ -261,7 +261,7 @@ Yeni kontrat imzalanmamış ancak taşınmazı rezerve etmiş ise; rezerve edild
                     <li><a href="elbeyli-waterfall.html">Waterfall Villaları</a></li>
                     <li><a href="derbent-kale-2.html">Kale Villaları</a></li>
                     <li><a href="elbeyli-villas-3.html">Hobbit Villaları</a></li>
-                    <li><a href="serefiye-stone.html">Stone Houses</a></li>
+                    <li><a href="serefiye-stone.html">Stone House</a></li>
                     
                   </ul>
                  
