--- a/public/elbeyli-villas-3.html
+++ b/public/elbeyli-villas-3.html
@@ -660,7 +660,7 @@
           </li>
           <li>
             <i class="fa fa-address-card-o"></i>
-            <a href="hesabim.html" id="mobile-login-button">Kaydol</a>
+            <a href="hesabim.html" id="mobile-logout-button">Kaydol</a>
           </li>
         </ul>
         <!-- /.mobile-nav__contact -->
