--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tas Mahal</title>
     <!-- favicons Icons -->
+     <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({pageLanguage: 'tr', includedLanguages: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -75,7 +81,7 @@
   <body>
     
     <!--  -->
-   
+ <div id="google_translate_element">
     <div class="page-wrapper">
       <header class="main-header clearfix">
         <nav class="main-menu clearfix">
@@ -864,6 +870,7 @@
       </footer>
       <!--Site Footer One End-->
     </div>
+    </div>   
     <!-- /.page-wrapper -->
 
    <div class="mobile-nav__wrapper">
