--- a/public/giris.html
+++ b/public/giris.html
@@ -98,7 +98,7 @@
   <body>
     
     <!--  -->
-   
+    <div id="google_translate_element"></div>
     <div class="page-wrapper">
      <header class="main-header clearfix">
         <nav class="main-menu clearfix">
@@ -521,10 +521,14 @@
       <!-- /.search-popup__content -->
     </div>
     <!-- /.search-popup -->
-
-    <a href="#" data-target="html" class="scroll-to-target scroll-to-top"
+<a href="#" data-target="html" class="scroll-to-target scroll-to-top"
       ><i class="fa fa-angle-up"></i
     ></a>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'tr', includedLanguages: 'tr,en,fr,de,ru,ar',layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script>
 
     <script src="assets/vendors/jquery/jquery-3.5.1.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
