--- a/public/gizlilik.html
+++ b/public/gizlilik.html
@@ -72,7 +72,7 @@
 
   <body>
     
-   
+    <div id="google_translate_element"></div>
     <div class="page-wrapper">
       <!--About Page Start-->
       <header class="main-header clearfix">
@@ -412,10 +412,14 @@ veya gelecekte Kurul&rsquo;un belirleyeceği diğer y&ouml;ntemlerle iletebilirs
 
     
     <!-- /.search-popup -->
-
-    <a href="#" data-target="html" class="scroll-to-target scroll-to-top"
+<a href="#" data-target="html" class="scroll-to-target scroll-to-top"
       ><i class="fa fa-angle-up"></i
     ></a>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'tr', includedLanguages: 'tr,en,fr,de,ru,ar',layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+</script>
 
     <script src="assets/vendors/jquery/jquery-3.5.1.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
