--- a/public/kullanim-sartlari.html
+++ b/public/kullanim-sartlari.html
@@ -417,6 +417,8 @@ function googleTranslateElementInit() {
 }
 </script>
 
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
    <script src="assets/vendors/jquery/jquery-3.5.1.min.js"></script>
     <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendors/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
