--- a/public/faq.html
+++ b/public/faq.html
@@ -90,8 +90,9 @@
      <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
-  <body>
-    
+   <body>
+    <div id="google_translate_element" style="display: none;"></div>
+    <!--  -->   
     <div id="google_translate_element"></div>
     <div class="page-wrapper">
       <!--About Page Start-->
