--- a/public/fethiye-3+1.html
+++ b/public/fethiye-3+1.html
@@ -98,8 +98,9 @@
      <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
-  <body>
-    <div id="google_translate_element"></div>
+   <body>
+    <div id="google_translate_element" style="display: none;"></div>
+    <!--  -->   <div id="google_translate_element"></div>
     <div class="page-wrapper">
       <header class="main-header clearfix">
         <nav class="main-menu clearfix">
