--- a/public/hesabim.html
+++ b/public/hesabim.html
@@ -110,8 +110,9 @@
     <link rel="stylesheet" href="assets/login/css/style.css" />
   </head>
 
-  <body>
-    
+   <body>
+    <div id="google_translate_element" style="display: none;"></div>
+    <!--  -->   
     <!--  -->
     <div id="google_translate_element"></div>
     <div class="page-wrapper">
