--- a/public/index.html
+++ b/public/index.html
@@ -72,8 +72,9 @@
 
   </head>
 
-  <body>
-    
+   <body>
+    <div id="google_translate_element" style="display: none;"></div>
+    <!--  -->   
     <!--  -->
    
     <div class="page-wrapper">
