--- a/public/reservation.html
+++ b/public/reservation.html
@@ -15,8 +15,9 @@
       <style type='text/css'>@import url(//d2uyahi4tkntqv.cloudfront.net/assets/widgets.booknow.v2.css?v=1.0.0); </style>
   </head>
 
-  <body>
-    <div class="row mfp-content-bg">
+   <body>
+    <div id="google_translate_element" style="display: none;"></div>
+    <!--  -->   <div class="row mfp-content-bg">
       </div>
    
     
