--- a/public/elbeyli-waterfall.html
+++ b/public/elbeyli-waterfall.html
@@ -68,8 +68,9 @@
     
   </head>
 
-  <body>
-    <div id="google_translate_element"></div>
+   <body>
+    <div id="google_translate_element" style="display: none;"></div>
+    <!--  -->   <div id="google_translate_element"></div>
     <div class="page-wrapper">
       <header class="main-header clearfix">
         <nav class="main-menu clearfix">
