--- a/public/giris.html
+++ b/public/giris.html
@@ -95,8 +95,9 @@
 
   </head>
 
-  <body>
-    
+   <body>
+    <div id="google_translate_element" style="display: none;"></div>
+    <!--  -->   
     <!--  -->
     <div id="google_translate_element"></div>
     <div class="page-wrapper">
