--- a/public/index-old.html
+++ b/public/index-old.html
@@ -69,8 +69,9 @@
     <link rel="stylesheet" href="assets/css/entox-responsive.css" />
   </head>
 
-  <body>
-    <div id="google_translate_element" style="display: none;"></div>
+   <body>
+   
+    <!--  -->   <div id="google_translate_element" style="display: none;"></div>
     <!--  -->
   
     <div class="page-wrapper">
