--- a/public/kullanim-sartlari.html
+++ b/public/kullanim-sartlari.html
@@ -70,8 +70,9 @@
     <link rel="stylesheet" href="assets/css/entox-responsive.css" />
   </head>
 
-  <body>
-    
+   <body>
+    <div id="google_translate_element" style="display: none;"></div>
+    <!--  -->   
     <div id="google_translate_element"></div>
     <div class="page-wrapper">
       <!--About Page Start-->
