--- a/public/reservation-ios.html
+++ b/public/reservation-ios.html
@@ -13,8 +13,9 @@
     <style type='text/css'>@import url(//d2uyahi4tkntqv.cloudfront.net/assets/search_widget.css?v=1.0.0); </style>
   </head>
 
-  <body>
-    
+   <body>
+    <div id="google_translate_element" style="display: none;"></div>
+    <!--  -->   
 
     <div id='hr_search_widget'></div>
     <script id='hr_widget_script' async='true' src='//iznik-tas-mahal.hotelrunner.com/widgets/e030dea3dc50b66ac5cd/search_widget.js?v=1.0.0'></script>
