--- a/public/derbent-villas.html
+++ b/public/derbent-villas.html
@@ -228,7 +228,7 @@
                  
                   <a
                     href="reservation.html"
-                    class="quick-popup listing-details__contact-info-phone listing-details__contact-info-message" id="reservation-button"
+                    class="listing-details__contact-info-phone listing-details__contact-info-message" id="reservation-button"
                   >
                     <div class="icon">
 
