--- a/public/derbent-white-test.html
+++ b/public/derbent-white-test.html
@@ -235,7 +235,7 @@
                  
                   <a onclick="HotelRunnerWidget.show(null);"
                     href="javascript:void(0)"
-                    class="quick-popup listing-details__contact-info-phone listing-details__contact-info-message" 
+                    class="listing-details__contact-info-phone listing-details__contact-info-message" 
                   >
                     <div class="icon">
 
