--- a/public/derbent-villas.html
+++ b/public/derbent-villas.html
@@ -226,9 +226,9 @@
                 </div>
                   <div class="listing-details__contact-info">
                  
-                  <a
-                    href="reservation.html"
-                    class="listing-details__contact-info-phone listing-details__contact-info-message" id="reservation-button"
+                  <a onclick="HotelRunnerWidget.show(null);"
+                    href="javascript:void(0)"
+                    class="listing-details__contact-info-phone listing-details__contact-info-message" 
                   >
                     <div class="icon">
 
