--- a/public/derbent-white-test.html
+++ b/public/derbent-white-test.html
@@ -233,9 +233,9 @@
                 </div>
                   <div class="listing-details__contact-info">
                  
-                  <a onclick="HotelRunnerWidget.show(null);"
-                    href="javascript:void(0)"
-                    class="listing-details__contact-info-phone listing-details__contact-info-message" 
+                  <a
+                    href="reservation.html"
+                    class="quick-popup listing-details__contact-info-phone listing-details__contact-info-message" id="reservation-button"
                   >
                     <div class="icon">
 
