--- a/public/elbeyli-villas-2.html
+++ b/public/elbeyli-villas-2.html
@@ -135,7 +135,7 @@
             <ul class="thm-breadcrumb list-unstyled">
               <li><a href="villalar.html">Villalar</a></li>
               <li><span>-</span></li>
-              <li>Elbeyli Villaları 21</li>
+              <li>Elbeyli Villaları 2+1</li>
             </ul>
           </div>
         </div>
