--- a/public/derbent-white.html
+++ b/public/derbent-white.html
@@ -6,6 +6,7 @@
     <title>Tas Mahal</title>
     <!-- favicons Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style type='text/css'>@import url(//d2uyahi4tkntqv.cloudfront.net/assets/widgets.booknow.v2.css?v=1.0.0); </style>
 
     <link
       rel="apple-touch-icon"
@@ -763,6 +764,8 @@ function googleTranslateElementInit() {
     <!-- main js -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="assets/js/entox.js"></script>
+    <script async='true' src='//d2uyahi4tkntqv.cloudfront.net/assets/jquery.js?v=1.0.0'></script>
+    <script id='hr_widget_script' async='true' src='//iznik-tas-mahal.hotelrunner.com/widgets/09794081d99e1e9a8dc8/values.js?v=1.0.0'></script>
 
 
     <!-- template js -->
