--- a/public/fethiye-3+1.html
+++ b/public/fethiye-3+1.html
@@ -89,7 +89,9 @@
   <link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.css" />
    <link rel="stylesheet" type="text/css" href="assets/css/glass-case.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/shoes.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" />
+   <script src="assets/js/entox.js"></script>
+    <script async='true' src='//d2uyahi4tkntqv.cloudfront.net/assets/jquery.js?v=1.0.0'></script>
+    <script id='hr_widget_script' async='true' src='//iznik-tas-mahal.hotelrunner.com/widgets/09794081d99e1e9a8dc8/values.js?v=1.0.0'></script> <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" />
     
         
   
