--- a/public/derbent-villas.html
+++ b/public/derbent-villas.html
@@ -52,7 +52,10 @@
   <link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.css" />
    <link rel="stylesheet" type="text/css" href="assets/css/glass-case.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/shoes.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" /><link
+      rel="stylesheet"
+      href="assets/vendors/bootstrap-select/css/bootstrap-select.min.css"
+    />
     
         
   
