--- a/public/index-old.html
+++ b/public/index-old.html
@@ -113,12 +113,12 @@
               <div class="main-menu-wrapper__btn-box">
                  <select class="selectpicker languages" aria-label="Yer" id="select-lan">
                                             
-                                            <option value="1">TR</option>
-                                            <option value="2">EN</option>
-                                             <option value="3">FR</option>
-                                              <option value="4">DE</option>
-                                               <option value="5">AR</option>
-                                                <option value="6">RU</option>
+                                            <option value="1" onclick="translateTo('tr')">TR</option>
+                                            <option value="2" onclick="translateTo('en')">EN</option>
+                                            <option value="3" onclick="translateTo('fr')">FR</option>
+                                            <option value="4" onclick="translateTo('de')">DE</option>
+                                            <option value="5" onclick="translateTo('ar')">AR</option>
+                                            <option value="6" onclick="translateTo('ru')">RU</option>
                                             
                                         </select>
                 <a href="giris.html" class="giris-button" id="login-button">Giriş</a>
