--- a/public/derbent-white.html
+++ b/public/derbent-white.html
@@ -769,7 +769,9 @@
     <script src="assets/vendors/vegas/vegas.min.js"></script>
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
     <script src="assets/js/modernizr.js"></script>
-    <!-- main js -->
+     <!-- main js -->
+     <script async='true' src='//d2uyahi4tkntqv.cloudfront.net/assets/jquery.js?v=1.0.0'></script>
+    <script id='hr_widget_script' async='true' src='//iznik-tas-mahal.hotelrunner.com/widgets/09794081d99e1e9a8dc8/values.js?v=1.0.0'></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="assets/js/entox.js"></script>
 
