--- a/public/elbeyli-waterfall.html
+++ b/public/elbeyli-waterfall.html
@@ -74,7 +74,7 @@
 
    <body>
     <div id="google_translate_element" style="display: none;"></div>
-    <!--  -->   <div id="google_translate_element"></div>
+    
     <div class="page-wrapper">
       <header class="main-header clearfix">
         <nav class="main-menu clearfix">
@@ -157,7 +157,7 @@
         <div class="container">
           <div class="row">
             <div class="col-xl-8 col-12">
-              <div class="align-center mb-md-30" style="margin-top: -30px;">
+              <div class="align-center mb-md-30">
                 <ul id="glasscase" class="gc-start">
                   <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Elbeyliwaterfallhouse/1.webp" alt="img"></li>
                   <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Elbeyliwaterfallhouse/2.webp" alt="img"></li>
