--- a/public/derbent-kale-1.html
+++ b/public/derbent-kale-1.html
@@ -151,7 +151,7 @@
         <div class="container">
        <div class="row">
             <div class="col-xl-8 col-11">
-              <div class="align-center mb-md-30" style="margin-top: -30px;">
+              <div class="align-center mb-md-30">
                 <ul id="glasscase" class="gc-start">
                   <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Kale11/1.webp" alt="img"></li>
                   <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Kale11/2.webp" alt="img"></li>
