--- a/public/derbent-villas.html
+++ b/public/derbent-villas.html
@@ -150,7 +150,7 @@
         <div class="container">
        <div class="row">
             <div class="col-xl-8 col-12">
-              <div class="align-center mb-md-30" style="margin-top: -30px;">
+              <div class="align-center mb-md-30">
                 <ul id="glasscase" class="gc-start">
                       <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Derbentvillas/1.webp" alt="img"></li>
                       <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Derbentvillas/2.webp" alt="img"></li>
