--- a/public/fethiye-3+1.html
+++ b/public/fethiye-3+1.html
@@ -187,7 +187,7 @@
         <div class="container">
           <div class="row">
             <div class="col-xl-8 col-12">
-              <div class="align-center mb-md-30" style="margin-top: -30px;">
+              <div class="align-center mb-md-30">
                 <ul id="glasscase" class="gc-start">
                   <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/fethiye31/1.webp" alt="img"></li>
                   <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/fethiye31/2.webp" alt="img"></li>
