--- a/public/elbeyli-kuzeymen-3.html
+++ b/public/elbeyli-kuzeymen-3.html
@@ -139,7 +139,7 @@
             <ul class="thm-breadcrumb list-unstyled">
               <li><a href="villalar.html">Villalar</a></li>
               <li><span>-</span></li>
-              <li>Kuzeymen Villa 31</li>
+              <li>Kuzeymen Villa 3+1</li>
             </ul>
           </div>
         </div>
