--- a/public/elbeyli-waterfall.html
+++ b/public/elbeyli-waterfall.html
@@ -766,7 +766,9 @@
     <script src="assets/vendors/wow/wow.js"></script>  
     <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
     <script src="assets/js/modernizr.js"></script>
-    
+    <!-- main js -->
+     <script async='true' src='//d2uyahi4tkntqv.cloudfront.net/assets/jquery.js?v=1.0.0'></script>
+    <script id='hr_widget_script' async='true' src='//iznik-tas-mahal.hotelrunner.com/widgets/09794081d99e1e9a8dc8/values.js?v=1.0.0'></script>
     <script src="assets/vendors/timepicker/timePicker.js"></script>
     <script src="assets/js/entox.js"></script>
     
