--- a/public/giris.html
+++ b/public/giris.html
@@ -185,7 +185,7 @@
                 <div class="container">
                     <div class="row">
 
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 offset-lg-3">
                             <form action="#" class="tm-form tm-login-form" id="login-form">
                                 <h4>Üye Girişi</h4>
                                 <div class="tm-form-inner">
@@ -244,8 +244,12 @@
                                 </div>
                             </form>
                         </div>
+                        <div class="w-100">
+                           <!-- new line -->
+                        </div>
 
-                        <div class="col-lg-6">
+
+                        <div class="col-lg-6 offset-lg-3" id="kaydol">
                             <form action="#" class="tm-form tm-register-form" id="register-form">
                                 <h4>Üye Ol</h4>
                                 <div class="tm-form-inner">
@@ -290,10 +294,10 @@
                                 </div>
                             </form>
                         </div>
-
+</div>
                     </div>
                 </div>
-            </div>
+            
             <!--// Login Register Area -->
 
         </main>
