--- a/public/index-old.html
+++ b/public/index-old.html
@@ -122,7 +122,7 @@
                                             
                                         </select>
                 <a href="giris.html" class="giris-button" id="login-button">Giriş</a>
-                <a href="giris.html" class="thm-btn main-menu-wrapper__btn" id="logout-button">Kaydol</a>
+                <a href="giris.html#kaydol" class="thm-btn main-menu-wrapper__btn" id="logout-button">Kaydol</a>
               </div>
             </div>
           </div>
