--- a/public/faq.html
+++ b/public/faq.html
@@ -576,7 +576,7 @@
           </li>
           <li>
             <i class="fa fa-address-card-o"></i>
-            <a href="hesabim.html" id="mobile-logout-button">Kaydol</a>
+            <a href="giris.html" id="mobile-logout-button">Kaydol</a>
           </li>
         </ul>
         <!-- /.mobile-nav__contact -->
