--- a/public/villalar-list-2.html
+++ b/public/villalar-list-2.html
@@ -735,7 +735,7 @@ Vadi Fethiye'nin doğayla iç içe konumlanmış 31 villası, taş ve ahşap dok
           </li>
           <li>
             <i class="fa fa-address-card-o"></i>
-            <a href="hesabim.html" id="mobile-logout-button">Kaydol</a>
+            <a href="giris.html" id="mobile-logout-button">Kaydol</a>
           </li>
         </ul>
         <!-- /.mobile-nav__contact -->
