--- a/public/gizlilik.html
+++ b/public/gizlilik.html
@@ -395,7 +395,7 @@ veya gelecekte Kurul&rsquo;un belirleyeceği diğer y&ouml;ntemlerle iletebilirs
           </li>
           <li>
             <i class="fa fa-address-card-o"></i>
-            <a href="hesabim.html" id="mobile-logout-button">Kaydol</a>
+            <a href="giris.html" id="mobile-logout-button">Kaydol</a>
           </li>
         </ul>
         <!-- /.mobile-nav__contact -->
