--- a/public/hakkimizda.html
+++ b/public/hakkimizda.html
@@ -491,7 +491,7 @@ Bursa İznik'te konumlanmaktayız. İstanbul'a yalnızca bir buçuk saat uzaklı
           </li>
           <li>
             <i class="fa fa-address-card-o"></i>
-            <a href="hesabim.html" id="mobile-logout-button">Kaydol</a>
+            <a href="giris.html" id="mobile-logout-button">Kaydol</a>
           </li>
         </ul>
         <!-- /.mobile-nav__contact -->
