--- a/public/index.html
+++ b/public/index.html
@@ -904,7 +904,7 @@
           </li>
           <li>
             <i class="fa fa-address-card-o"></i>
-            <a href="hesabim.html" id="mobile-logout-button">Kaydol</a>
+            <a href="giris.html" id="mobile-logout-button">Kaydol</a>
           </li>
           
         </ul>
