--- a/public/kullanim-sartlari.html
+++ b/public/kullanim-sartlari.html
@@ -391,7 +391,7 @@ Yeni kontrat imzalanmamış ancak taşınmazı rezerve etmiş ise; rezerve edild
           </li>
           <li>
             <i class="fa fa-address-card-o"></i>
-            <a href="hesabim.html" id="mobile-logout-button">Kaydol</a>
+            <a href="giris.html" id="mobile-logout-button">Kaydol</a>
           </li>
         </ul>
         <!-- /.mobile-nav__contact -->
