--- a/public/derbent-kale-2.html
+++ b/public/derbent-kale-2.html
@@ -186,6 +186,8 @@
                  <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Kale21/1(28).webp" alt="img"></li>
                  <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Kale21/1(29).webp" alt="img"></li>
                  <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Kale21/1(30).webp" alt="img"></li>
+                 <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/Kale21/1(31).webp" alt="img"></li>
+
                   
                   
 
