--- a/public/derbent-villas.html
+++ b/public/derbent-villas.html
@@ -130,7 +130,7 @@
       <section
         class="page-header"
         style="
-          background-image: url(https://tasmahal.s3.eu-north-1.amazonaws.com/backgrounds/page-header-bg.jpg);
+          background-image: url(https://tasmahal.s3.eu-north-1.amazonaws.com/cards/derbent-villas-21-kart.webp);
         "
       >
         <div class="container">
