--- a/public/villalar-list-mugla.html
+++ b/public/villalar-list-mugla.html
@@ -188,7 +188,7 @@
             
             <div class="property-card-wrap style-dark">
               <div class="property-thumb">
-                <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/resources/fethiye-kapak.webp" alt="img" />
+                <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/fethiye31/1.webp" alt="img" />
               </div>
               <div class="property-card style-dark">
                 <div class="property-card-details">
