--- a/public/villalar-mugla.html
+++ b/public/villalar-mugla.html
@@ -234,7 +234,7 @@
 <a href="./fethiye-3+1.html">
                   <div class="explore-rent__img"> 
                     <img
-                      src="https://tasmahal.s3.eu-north-1.amazonaws.com/resources/fethiye-kapak.webp"
+                      src="https://tasmahal.s3.eu-north-1.amazonaws.com/fethiye31/1.webp"
                       alt=""
                     />
                     <div class="explore-rent__icon">
