--- a/public/fethiye-3+1.html
+++ b/public/fethiye-3+1.html
@@ -189,7 +189,7 @@
             <div class="col-xl-8 col-12">
               <div class="align-center mb-md-30">
                 <ul id="glasscase" class="gc-start">
-                  <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/fethiye31/1.webp" alt="img"></li>
+                  <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/resources/fethiye-kapak.webp" alt="img"></li>
                   <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/fethiye31/2.webp" alt="img"></li>
                   <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/fethiye31/3.webp" alt="img"></li>
                   <li><img src="https://tasmahal.s3.eu-north-1.amazonaws.com/fethiye31/4.webp" alt="img"></li>
