--- a/public/villalar-list-2.html
+++ b/public/villalar-list-2.html
@@ -466,7 +466,7 @@ Derbent White , göl manzarasının dinginliğiyle buluşan geniş yaşam alanla
             </div>
             <div class="property-card-wrap style-dark">
               <div class="property-thumb">
-                <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/fethiye31/1.webp" alt="img" />
+                <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/resources/fethiye-kapak.webp" alt="img" />
               </div>
               <div class="property-card style-dark">
                 <div class="property-card-details">
