--- a/public/elbeyli-kuzeymen-2.html
+++ b/public/elbeyli-kuzeymen-2.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tas Mahal</title>
     <!-- favicons Icons -->
-<link rel="stylesheet" href="assets/css/fontawesome.min.css"><style type='text/css'>@import url(//d2uyahi4tkntqv.cloudfront.net/assets/widgets.booknow.v2.css?v=1.0.0); </style>
+<link rel="stylesheet" href="assets/css/fontawesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<style type='text/css'>@import url(//d2uyahi4tkntqv.cloudfront.net/assets/widgets.booknow.v2.css?v=1.0.0); </style>
 
     <link
       rel="apple-touch-icon"
