--- a/public/faq.html
+++ b/public/faq.html
@@ -6,7 +6,7 @@
     <title>FAQ</title>
     <!-- favicons Icons -->
 <link rel="stylesheet" href="assets/css/fontawesome.min.css">
-    <link
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="https://tasmahal.s3.eu-north-1.amazonaws.com/favicons/apple-touch-icon.png"
