--- a/public/villalar-test.html
+++ b/public/villalar-test.html
@@ -214,7 +214,7 @@
                                 <div class="portfolio-img img-shine" data-bs-toggle="modal" data-bs-target="#portfolioModal">
                                     <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/cards/elbeyli-villas-31.webp" alt="project image">
                                     <div class="portfolio-card-shape">
-                                        <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/blueprints/Elbeyli+Waterfall.webp" alt="img">
+                                        <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/blueprints/Derbent63Zeminkatcopy.png" alt="img">
                                     </div>
                                 </div>
                                 <div class="portfolio-content">
