--- a/public/gizlilik.html
+++ b/public/gizlilik.html
@@ -355,6 +355,7 @@ veya gelecekte Kurul&rsquo;un belirleyeceği diğer y&ouml;ntemlerle iletebilirs
                   <p class="site-footer-bottom__copy-right">
                     © Villa Village  İznik 2025 Her Hakkı Saklıdır
                   </p>
+                  <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/brand/Cftc_BrandTech_Logo.svg" alt="">
                 </div>
               </div>
             </div>
