--- a/public/derbent-villas.html
+++ b/public/derbent-villas.html
@@ -673,6 +673,7 @@
                   <p class="site-footer-bottom__copy-right">
                     © Villa Village  İznik 2025 Her Hakkı Saklıdır
                   </p>
+                  <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/brand/Cftc_BrandTech_Logo.svg" alt="">
                 </div>
               </div>
             </div>
