--- a/public/kullanim-sartlari.html
+++ b/public/kullanim-sartlari.html
@@ -351,6 +351,7 @@ Yeni kontrat imzalanmamış ancak taşınmazı rezerve etmiş ise; rezerve edild
                   <p class="site-footer-bottom__copy-right">
                     © Villa Village  İznik 2025 Her Hakkı Saklıdır
                   </p>
+                  <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/brand/Cftc_BrandTech_Logo.svg" alt="">
                 </div>
               </div>
             </div>
