--- a/public/villalar-list.html
+++ b/public/villalar-list.html
@@ -637,6 +637,7 @@ Elbeyli Villas, doğanın kalbinde, taş ve ahşabın sıcak dokusunu modern det
                   <p class="site-footer-bottom__copy-right">
                     © Villa Village  İznik 2025 Her Hakkı Saklıdır
                   </p>
+                  <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/brand/Cftc_BrandTech_Logo.svg" alt="">
                 </div>
               </div>
             </div>
