--- a/public/index-old.html
+++ b/public/index-old.html
@@ -982,8 +982,9 @@
                   </div>
                   <p class="site-footer-bottom__copy-right">
                     © Villa Village  İznik 2025 Her Hakkı Saklıdır
-                  </p>
-                  <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/brand/Cftc_BrandTech_Logo.svg" alt="">
+                  </p><a href="https://www.cftcbrandtech.com">
+                    <a href="https://www.cftcbrandtech.com">
+                      <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/brand/Cftc_BrandTech_Logo.svg" alt=""></a></a>
                   
                  
                 </div>
