--- a/public/gizlilik.html
+++ b/public/gizlilik.html
@@ -355,7 +355,8 @@ veya gelecekte Kurul&rsquo;un belirleyeceği diğer y&ouml;ntemlerle iletebilirs
                   <p class="site-footer-bottom__copy-right">
                     © Villa Village  İznik 2025 Her Hakkı Saklıdır
                   </p>
-                  <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/brand/Cftc_BrandTech_Logo.svg" alt="">
+                  <a href="https://www.cftcbrandtech.com">
+                    <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/brand/Cftc_BrandTech_Logo.svg" alt=""></a>
                 </div>
               </div>
             </div>
