--- a/public/hakkimizda.html
+++ b/public/hakkimizda.html
@@ -451,7 +451,8 @@ Bursa İznik'te konumlanmaktayız. İstanbul'a yalnızca bir buçuk saat uzaklı
                   <p class="site-footer-bottom__copy-right">
                     © Villa Village  İznik 2025 Her Hakkı Saklıdır
                   </p>
-                  <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/brand/Cftc_BrandTech_Logo.svg" alt="">
+                  <a href="https://www.cftcbrandtech.com">
+                    <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/brand/Cftc_BrandTech_Logo.svg" alt=""></a>
                 </div>
               </div>
             </div>
