--- a/public/villalar-list-mugla.html
+++ b/public/villalar-list-mugla.html
@@ -417,7 +417,8 @@ Vadi Fethiye'nin doğayla iç içe konumlanmış 31 villası, taş ve ahşap dok
                   <p class="site-footer-bottom__copy-right">
                     © Villa Village  İznik 2025 Her Hakkı Saklıdır
                   </p>
-                  <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/brand/Cftc_BrandTech_Logo.svg" alt="">
+                  <a href="https://www.cftcbrandtech.com">
+                    <img src="https://tasmahal.s3.eu-north-1.amazonaws.com/brand/Cftc_BrandTech_Logo.svg" alt=""></a>
                 </div>
               </div>
             </div>
